Elimine la parte del login

--- a/html/registroReserva.html
+++ b/html/registroReserva.html
@@ -28,8 +28,8 @@
   
       <div class="text-center " id="navegacion">
   
-        <a id="home" href="Home.html">HOME</a>
-        <a class="reservas" href="welcome.html">Reservar <span class="iconos"><svg width="1em" height="1em" viewBox="0 0 16 16"
+        <a id="home" href="../index.html">HOME</a>
+        <a class="reservas" href="/html/welcome.html">Reservar <span class="iconos"><svg width="1em" height="1em" viewBox="0 0 16 16"
               class="bi bi-calendar-minus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M5.5 9.5A.5.5 0 0 1 6 9h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z" />
               <path fill-rule="evenodd"
@@ -37,7 +37,7 @@
               <path fill-rule="evenodd"
                 d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z" />
             </svg></span></a>
-        <a class="reservas" href="registroReserva.html">Tus reservas <span class="iconos"><svg width="1em" height="1em" viewBox="0 0 16 16"
+        <a class="reservas" href="./registroReserva.html">Tus reservas <span class="iconos"><svg width="1em" height="1em" viewBox="0 0 16 16"
               class="bi bi-calendar-check" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd"
                 d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
