--- a/html/welcome.html
+++ b/html/welcome.html
@@ -30,7 +30,7 @@
 
     <div class="text-center " id="navegacion">
 
-      <a id="home" href="Home.html">HOME</a>
+      <a id="home" href="../index.html">HOME</a>
       <a class="reservas" href="welcome.html">Reservar <span class="iconos"><svg width="1em" height="1em" viewBox="0 0 16 16"
             class="bi bi-calendar-minus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M5.5 9.5A.5.5 0 0 1 6 9h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z" />
